using wtforms_sqlalchemy for choosing the room

--- a/templates/login.html
+++ b/templates/login.html
@@ -47,10 +47,12 @@ Login
         <h2 class="form-signin-heading">Please sign in</h2>
         <h4 style="color: red">{{ errorMsg }}</h4>
         {{ form.hidden_tag() }}
+        {{ form.csrf_token }}
         {{ wtf.form_field(form.username)}}
         {{ wtf.form_field(form.password)}}
-        {{ wtf.form_field(form.remember)}}
-        <a href="{{ url_for('forgot') }}">Forgot Your Password?</a>
+        {{ wtf.form_field(form.remember)}}<br/>
+        <a href="{{ url_for('forgot') }}">Forgot Your Password?</a><br/>
+        <a href="{{ url_for('signup') }}">don't have an account?<br/>sign up here!!</a><br/>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 
