--- a/templates/reserve.html
+++ b/templates/reserve.html
@@ -36,13 +36,9 @@ Reserve Room
 
   <form class="form-signin" method="post" action="">
     <h2 class="form-signin-heading">{{ msg }}</h2>
-  <label for="room">Choose a room:</label>
-    <br/>
-    <select class="selectpicker" name="room" id="room" style="width:100%;height:15%;padding:5px; margin:10px">
-        {% for room_num in rooms %}
-        <option value="{{ room_num }}">{{ room_num }}</option>
-        {% endfor %}
-    </select>
+    {{ form.csrf_token }}
+    {{ form.hidden_tag() }}
+    {{ wtf.form_field(form.room_num)}}
     <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
   </form>
 
