--- a/templates/signup.html
+++ b/templates/signup.html
@@ -34,10 +34,11 @@ Sign Up
 
 <div class="container">
 
-  <form class="form-signin" method="post" action="/signup">
+  <form class="form-signin" method="post" action="">
     <h2 class="form-signin-heading">Sign Up</h2>
     <h3 style = 'color: red'>{{ errorMsg }}</h3>
     {{ form.hidden_tag() }}
+    {{ form.csrf_token }}
     {{ wtf.form_field(form.first_name) }}
     {{ wtf.form_field(form.last_name) }}
     {{ wtf.form_field(form.username) }}
@@ -45,7 +46,7 @@ Sign Up
     {{ wtf.form_field(form.password) }}
     {{ wtf.form_field(form.confirm) }}
 
-
+    <a href="{{ url_for('login') }}">already have an account?<br/>login here!!</a><br/>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
   </form>
 
