--- a/templates/admin-dashboard.html
+++ b/templates/admin-dashboard.html
@@ -51,27 +51,27 @@ Admin Dashboard
                            </a>
                        </li>
                        <li>
-                        <a href="/admin_views/room">
-                            <span class="las la-management"></span>
-                            🏠 Room Management
-                        </a>
-                    </li>
-{#                    <li>#}
-{#                        <a href="">#}
-{#                            <span class="las la-chart-pie2"></span>#}
-{#                            📂 Admin Management#}
-{#                        </a>#}
-{#                    </li>#}
+                           <a href="/admin_views/room">
+                               <span class="las la-management"></span>
+                               🏠 Room Management
+                           </a>
+                       </li>
+                       <li>
+                           <a href="{{ url_for('add_student') }}">
+                               <span class="las la-chart-pie2"></span>
+                               add a New Student Account
+                           </a>
+                       </li>
                    </ul>
                    <div class="menu-head">
-                    <span>Applications</span>
-                </div>
-                <ul>
-                    <li>
-                        <a href="https://outlook.office365.com/owa/?realm=upm.edu.sa">
-                            <span class="las "></span>
-                            ✉️ UPM Mailbox
-                        </a>
+                       <span>Applications</span>
+                   </div>
+                   <ul>
+                       <li>
+                           <a href="https://outlook.office365.com/owa/?realm=upm.edu.sa">
+                               <span class="las "></span>
+                               ✉️ UPM Mailbox
+                           </a>
                     </li>
                     <li>
                          <a href="https://www.upm.edu.sa/en">
