some improvements on the front end

--- a/templates/admin-dashboard.html
+++ b/templates/admin-dashboard.html
@@ -59,7 +59,7 @@ Admin Dashboard
                        <li>
                            <a href="{{ url_for('add_student') }}">
                                <span class="las la-chart-pie2"></span>
-                               add a New Student Account
+                               &nbsp&nbsp add a New Student Account
                            </a>
                        </li>
                    </ul>
