--- a/templates/messagePage.html
+++ b/templates/messagePage.html
@@ -14,27 +14,28 @@ Message
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">UHMS</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">UHMS</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li ><a href="{{ url_for('login') }}">Login</a></li>
-            <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+          <div id="navbar" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                  {#            <li ><a href="{{ url_for('login') }}">Login</a></li>#}
+                  {#            <li><a href="{{ url_for('signup') }}">Sign Up</a></li>#}
+              </ul>
+          </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container">
 
 
-    <h1 style="text-align: center">{{ message }}</h1>
+        <h1 style="text-align: center">{{ message }}</h1>
 
     </div> <!-- /container -->
 {% endblock %}
